--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,9 @@
 
 <section class="footer">
   <ul class="sci">
-      <li><a style="line-height: 62px;" href="discord link here"><img src="assets/images/discord.svg"></a></li>
-      <li><a style="line-height: 69px;" href="mailto: davidy804@gmail.com"><img src="assets/images/mail.svg"></a></li>
-      <li><a style="line-height: 73px;" href="instagram link here"><img src="assets/images/instagram.svg"></a></li>
+      <li><a style="line-height: 62px;" title="DavidEatsRice#3658" href="discord link here"><img src="assets/images/discord.svg"></a></li>
+      <li><a style="line-height: 69px;" title="davidy804@gmail.com" href="mailto: davidy804@gmail.com"><img src="assets/images/mail.svg"></a></li>
+      <li><a style="line-height: 73px;" title="@DavidEatsRice" href="instagram link here"><img src="assets/images/instagram.svg"></a></li>
   </ul>
 </section>
 <div style="margin-bottom: 5%">
