--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -16,9 +16,9 @@
           </div>
       </div>
     </div>
-    <a href="main#"><div class="scroll-up" style="z-index: 100; opacity: 50%;" title="Back to Top"></div></a>
+    <a href="main#"><div class="scroll-up" title="Back to Top"></div></a>
     <div style="display: flex; text-transform: uppercase;">
-      <a class="btn-slice" style="left: 1%; bottom: 5%" (click)="goBack()">
+      <a class="btn-slice" (click)="goBack()">
         <div class="top"><span>Back to Home</span></div>
         <div class="bottom"><span>Back to Home</span></div>
       </a>
