--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ section
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1000000;
+  z-index: 10;
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -175,6 +175,8 @@ section
   bottom: 5%;
   border-radius: 50px;
   cursor: pointer;
+  z-index: 9999;
+  opacity: 0.6;
 }
 .scroll-up:before,.scroll-up:after
 {
@@ -199,6 +201,7 @@ section
 {
   transform: scale(1.2);
   transition: ease-in-out 150ms;
+  opacity: 1;
 }
 .fitBg
 {
@@ -295,14 +298,11 @@ section
   transition: 0.5s;
   margin: 10px;
 }
-.project .projectList:hover .box
-{
-  opacity: 0.7;
-}
 .project .projectList .box:hover
 {
-  opacity: 1;
   box-shadow: 0 0 15px #fff;
+  transform: scale(1.1);
+  transition: ease-in-out 150ms;
 }
 .project .projectList .box .imgBx
 {
@@ -349,6 +349,8 @@ section
   flex-wrap: wrap;
   margin-top: 40px;
   margin-bottom: 40px;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 .main .mainList .box
 {
@@ -383,13 +385,13 @@ section
   align-items: center;
   position: absolute;
   top: 0px;
-  color: #ffffff;
-  opacity: 0.7;
+  mix-blend-mode: difference;
 }
 .main .mainList .box .category span
 {
-  color: #fff;
-  font-size: 1.3em;
+  color: #ccc;
+  font-size: 1.2em;
+  opacity: 0.7;
 }
 .main .mainList .box .content
 {
@@ -423,9 +425,10 @@ section
 	font-weight: 500;
 	letter-spacing: 0.3rem;
   position: fixed;
-  bottom: 10%;
+  bottom: 5%;
   left: 5%;
   z-index: 99999;
+  opacity: 0.6;
   cursor: pointer;
 
   -webkit-transition: all 1000ms cubic-bezier(0.890, 0, 0.140, 1); /* older webkit */
@@ -509,6 +512,7 @@ section
 }
 .btn-slice:hover, .btn-slice:focus, .btn-slice:active {
 	margin-left: 10px;
+  opacity: 1;
 }
 .btn-slice:before{
 	content: '';
@@ -712,6 +716,11 @@ section
   {
     position: relative;
   }
+  .banner
+  {
+    font-size: 56px;
+    letter-spacing: 5px;
+  }
   .banner .content h2
   {
     font-size: 2.5em;
@@ -742,18 +751,28 @@ section
   {
     min-height: 250px;
   }
+  .scroll-up
+  {
+    right: 3%;
+    bottom: 5%;
+  }
   .btn-slice
   {
     padding: 0.6rem 1.25rem;
     font-size: 0.6rem;
     font-weight: 400;
     letter-spacing: 0.2rem;
+    top: 3.5%;
+    right: 3.5%;
+    left: auto;
+    bottom: auto;
+    z-index: 99999;
   }
   .btn-slice:before{
     content: '';
     height: 1px;
     width: 30px;
-    background-color: #ffffff;
+    background-color: #fff;
     position: absolute;
     margin-top: 6px;
     right: -17.5px;
@@ -783,12 +802,17 @@ section
   {
     height: 350px;
   }
+  .main .mainList
+  {
+    margin-left: 1%;
+    margin-right: 1%;
+  }
   .main .mainList .box
   {
     position: relative;
     min-width: 175px;
     height: 175px;
-    background: #191919;
+    background: #111;
     transition: 0.5s;
     margin: 10px;
   }
@@ -837,6 +861,6 @@ section
   }
   .copyrightText
   {
-    font-size: 16px;
+    font-size: 15px;
   }
 }
