--- a/src/app/all/all.component.html
+++ b/src/app/all/all.component.html
@@ -1,11 +1,12 @@
 <section class="main" id="all">
-  <div name="categorySelect">
+  <div name="categorySelect" style="margin-bottom: 2%">
     <input type="button" class="btn btn-primary" name="categorySelect" id="AllBtn" value="All Gear" (click)="showAll()">
     <input type="button" class="btn btn-primary" name="categorySelect" id="MiceBtn" value="Mice" (click)="showMice()">
     <input type="button" class="btn btn-primary" name="categorySelect" id="MousepadBtn" value="Mousepads" (click)="showMousepads()">
     <input type="button" class="btn btn-primary" name="categorySelect" id="KeyboardBtn" value="Keyboards" (click)="showKeyboards()">
     <input type="button" class="btn btn-primary" name="categorySelect" id="AudioBtn" value="Audio" (click)="showAudio()">
     <input type="button" class="btn btn-primary" name="categorySelect" id="MonitorBtn" value="Monitors" (click)="showMonitors()">
+    <input type="button" class="btn btn-primary" name="categorySelect" id="WatchBtn" value="Watches" (click)="showWatches()">
     <input type="button" class="btn btn-primary" name="categorySelect" id="EDCBtn" value="EDC" (click)="showEDC()">
     <input type="button" class="btn btn-primary" name="categorySelect" id="OtherBtn" value="Other" (click)="showOther()">
   </div>
@@ -80,6 +81,22 @@
     <div class="mainList">
       <div *ngFor="let all of alls">
         <div *ngIf="all.type=='Monitor'">
+          <div class="box">
+              <div class="imgBx">
+                  <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
+                  <div class="content">
+                    <a routerLink="/details/{{all.id}}" routerLinkActive="active"><h2>{{all.name}}<br><span>{{all.description}}</span></h2></a>                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div *ngIf="categoryWatches">
+    <h2 class="titleText">Watches</h2>
+    <div class="mainList">
+      <div *ngFor="let all of alls">
+        <div *ngIf="all.type=='Watches'">
           <div class="box">
               <div class="imgBx">
                   <a routerLink="/details/{{all.id}}" routerLinkActive="active"><img src="{{all.imgSrc}}" class="fitImg"></a>
