--- a/src/app/all/all.component.html
+++ b/src/app/all/all.component.html
@@ -1,5 +1,5 @@
 <section class="main" id="all">
-  <div name="categorySelect" style="margin-bottom: 2%">
+  <div name="categorySelect" class="categorySelect">
     <input type="button" class="btn btn-primary" name="categorySelect" id="AllBtn" value="All Gear" (click)="showAll()">
     <input type="button" class="btn btn-primary" name="categorySelect" id="MiceBtn" value="Mice" (click)="showMice()">
     <input type="button" class="btn btn-primary" name="categorySelect" id="MousepadBtn" value="Mousepads" (click)="showMousepads()">
