--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,15 @@
 
 <section class="banner">
-    <div class="content" id="DAVIDEATSRICE">
-      DAVIDEATSRICE
+  <img src="assets/images/bannerbg.jpg" class="fitBg">
+    <div class="content">
+      <h2>DavidEatsRice</h2>
+      <p>Gear Site</p>
     </div>
     <a href="home/#links"><div class="scroll-down"></div></a>
 </section>
 <section class="project" id="links">
     <div class="conetnt">
-        <h2 class="titleText">Links</h2>
+        <h2 class="linksText">Links</h2>
     </div>
     <div class="projectList">
       <div class="box">
