--- a/src/styles.css
+++ b/src/styles.css
@@ -311,14 +311,14 @@ section {
   flex-wrap: wrap;
   margin-top: 40px;
   margin-bottom: 40px;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 
 .main .mainList .box {
   position: relative;
-  min-width: 350px;
-  height: 350px;
+  min-width: 250px;
+  height: 250px;
   background: #191919;
   transition: 0.5s;
   margin: 10px;
@@ -337,7 +337,7 @@ section {
 .main .mainList .box .imgBx {
   position: relative;
   width: 100%;
-  height: 350px;
+  height: 250px;
 }
 
 .main .mainList .box .category {
@@ -642,8 +642,56 @@ fieldset:disabled .btn {
   text-align: center;
   font-family: 'Poppins', sans-serif;
 }
+@media (max-width: 1024px) {
+  .main {
+    margin-top: 10%;
+  }
 
-@media (max-width: 767px) {
+  .main .mainList .box {
+    position: relative;
+    min-width: 175px;
+    height: 175px;
+    background: #111;
+    transition: 0.5s;
+    margin: 10px;
+  }
+
+  .main .mainList .box .imgBx {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  .main .mainList .box .category {
+    top: 0px;
+    font-size: .7em;
+  }
+
+  .main .mainList .box .content {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+  }
+
+  .main .mainList .box .content h2 {
+    color: #fff;
+    font-size: 0.9em;
+    font-weight: 400;
+    line-height: 1em;
+  }
+
+  .main .mainList .box .content h2 span {
+    font-size: .7em;
+    font-weight: 300;
+    opacity: 0.5;
+  }
+}
+
+@media (max-width: 768px) {
   section {
     padding: 20px;
   }
